--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 	<script src="mt3d-plugin-precipitation.min.js"></script>
 	<script src="mt3d-plugin-fireworks.min.js"></script>
 	<script src="mt3d-plugin-livecam.min.js"></script>
+	<script src="mt3d-plugin-hotels.min.js"></script>
 	<script src="mt3d-plugin-plateau.min.js"></script>
 </head>
 <body style="width: 100%; height: 100%; margin: 0; padding: 0; position: absolute;">
@@ -39,7 +40,7 @@
 				lang,
 				container: 'map',
 				selection,
-				plugins: [mt3dPrecipitation(), mt3dFireworks(), mt3dLivecam(), mt3dPlateau({enabled: false})]
+				plugins: [mt3dPrecipitation(), mt3dFireworks(), mt3dLivecam(), mt3dHotels(), mt3dPlateau({enabled: false})]
 			});
 	</script>
 </body>
